--- a/.gitignore
+++ b/.gitignore
@@ -4832,3 +4832,271 @@ venv/venv_py_sel4/Lib/site-packages/urllib3-1.26.16.dist-info/METADATA
 venv/venv_py_sel4/Lib/site-packages/urllib3-1.26.16.dist-info/RECORD
 venv/venv_py_sel4/Lib/site-packages/urllib3-1.26.16.dist-info/top_level.txt
 venv/venv_py_sel4/Lib/site-packages/urllib3-1.26.16.dist-info/WHEEL
+PytestQuickStart/myTest/__pycache__/suite_2_test.cpython-311-pytest-7.4.0.pyc
+PytestQuickStart/myTest/__pycache__/test_suite_1.cpython-311-pytest-7.4.0.pyc
+venv/venv_py_sel4/Lib/site-packages/py.py
+venv/venv_py_sel4/Lib/site-packages/__pycache__/py.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/_pytest/__init__.py
+venv/venv_py_sel4/Lib/site-packages/_pytest/_argcomplete.py
+venv/venv_py_sel4/Lib/site-packages/_pytest/_version.py
+venv/venv_py_sel4/Lib/site-packages/_pytest/cacheprovider.py
+venv/venv_py_sel4/Lib/site-packages/_pytest/capture.py
+venv/venv_py_sel4/Lib/site-packages/_pytest/compat.py
+venv/venv_py_sel4/Lib/site-packages/_pytest/debugging.py
+venv/venv_py_sel4/Lib/site-packages/_pytest/deprecated.py
+venv/venv_py_sel4/Lib/site-packages/_pytest/doctest.py
+venv/venv_py_sel4/Lib/site-packages/_pytest/faulthandler.py
+venv/venv_py_sel4/Lib/site-packages/_pytest/fixtures.py
+venv/venv_py_sel4/Lib/site-packages/_pytest/freeze_support.py
+venv/venv_py_sel4/Lib/site-packages/_pytest/helpconfig.py
+venv/venv_py_sel4/Lib/site-packages/_pytest/hookspec.py
+venv/venv_py_sel4/Lib/site-packages/_pytest/junitxml.py
+venv/venv_py_sel4/Lib/site-packages/_pytest/legacypath.py
+venv/venv_py_sel4/Lib/site-packages/_pytest/logging.py
+venv/venv_py_sel4/Lib/site-packages/_pytest/main.py
+venv/venv_py_sel4/Lib/site-packages/_pytest/monkeypatch.py
+venv/venv_py_sel4/Lib/site-packages/_pytest/nodes.py
+venv/venv_py_sel4/Lib/site-packages/_pytest/nose.py
+venv/venv_py_sel4/Lib/site-packages/_pytest/outcomes.py
+venv/venv_py_sel4/Lib/site-packages/_pytest/pastebin.py
+venv/venv_py_sel4/Lib/site-packages/_pytest/pathlib.py
+venv/venv_py_sel4/Lib/site-packages/_pytest/py.typed
+venv/venv_py_sel4/Lib/site-packages/_pytest/pytester_assertions.py
+venv/venv_py_sel4/Lib/site-packages/_pytest/pytester.py
+venv/venv_py_sel4/Lib/site-packages/_pytest/python_api.py
+venv/venv_py_sel4/Lib/site-packages/_pytest/python_path.py
+venv/venv_py_sel4/Lib/site-packages/_pytest/python.py
+venv/venv_py_sel4/Lib/site-packages/_pytest/recwarn.py
+venv/venv_py_sel4/Lib/site-packages/_pytest/reports.py
+venv/venv_py_sel4/Lib/site-packages/_pytest/runner.py
+venv/venv_py_sel4/Lib/site-packages/_pytest/scope.py
+venv/venv_py_sel4/Lib/site-packages/_pytest/setuponly.py
+venv/venv_py_sel4/Lib/site-packages/_pytest/setupplan.py
+venv/venv_py_sel4/Lib/site-packages/_pytest/skipping.py
+venv/venv_py_sel4/Lib/site-packages/_pytest/stash.py
+venv/venv_py_sel4/Lib/site-packages/_pytest/stepwise.py
+venv/venv_py_sel4/Lib/site-packages/_pytest/terminal.py
+venv/venv_py_sel4/Lib/site-packages/_pytest/threadexception.py
+venv/venv_py_sel4/Lib/site-packages/_pytest/timing.py
+venv/venv_py_sel4/Lib/site-packages/_pytest/tmpdir.py
+venv/venv_py_sel4/Lib/site-packages/_pytest/unittest.py
+venv/venv_py_sel4/Lib/site-packages/_pytest/unraisableexception.py
+venv/venv_py_sel4/Lib/site-packages/_pytest/warning_types.py
+venv/venv_py_sel4/Lib/site-packages/_pytest/warnings.py
+venv/venv_py_sel4/Lib/site-packages/_pytest/__pycache__/__init__.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/_pytest/__pycache__/_argcomplete.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/_pytest/__pycache__/_version.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/_pytest/__pycache__/cacheprovider.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/_pytest/__pycache__/capture.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/_pytest/__pycache__/compat.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/_pytest/__pycache__/debugging.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/_pytest/__pycache__/deprecated.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/_pytest/__pycache__/doctest.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/_pytest/__pycache__/faulthandler.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/_pytest/__pycache__/fixtures.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/_pytest/__pycache__/freeze_support.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/_pytest/__pycache__/helpconfig.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/_pytest/__pycache__/hookspec.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/_pytest/__pycache__/junitxml.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/_pytest/__pycache__/legacypath.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/_pytest/__pycache__/logging.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/_pytest/__pycache__/main.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/_pytest/__pycache__/monkeypatch.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/_pytest/__pycache__/nodes.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/_pytest/__pycache__/nose.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/_pytest/__pycache__/outcomes.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/_pytest/__pycache__/pastebin.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/_pytest/__pycache__/pathlib.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/_pytest/__pycache__/pytester_assertions.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/_pytest/__pycache__/pytester.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/_pytest/__pycache__/python_api.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/_pytest/__pycache__/python_path.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/_pytest/__pycache__/python.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/_pytest/__pycache__/recwarn.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/_pytest/__pycache__/reports.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/_pytest/__pycache__/runner.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/_pytest/__pycache__/scope.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/_pytest/__pycache__/setuponly.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/_pytest/__pycache__/setupplan.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/_pytest/__pycache__/skipping.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/_pytest/__pycache__/stash.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/_pytest/__pycache__/stepwise.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/_pytest/__pycache__/terminal.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/_pytest/__pycache__/threadexception.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/_pytest/__pycache__/timing.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/_pytest/__pycache__/tmpdir.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/_pytest/__pycache__/unittest.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/_pytest/__pycache__/unraisableexception.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/_pytest/__pycache__/warning_types.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/_pytest/__pycache__/warnings.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/_pytest/_code/__init__.py
+venv/venv_py_sel4/Lib/site-packages/_pytest/_code/code.py
+venv/venv_py_sel4/Lib/site-packages/_pytest/_code/source.py
+venv/venv_py_sel4/Lib/site-packages/_pytest/_code/__pycache__/__init__.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/_pytest/_code/__pycache__/code.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/_pytest/_code/__pycache__/source.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/_pytest/_io/__init__.py
+venv/venv_py_sel4/Lib/site-packages/_pytest/_io/saferepr.py
+venv/venv_py_sel4/Lib/site-packages/_pytest/_io/terminalwriter.py
+venv/venv_py_sel4/Lib/site-packages/_pytest/_io/wcwidth.py
+venv/venv_py_sel4/Lib/site-packages/_pytest/_io/__pycache__/__init__.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/_pytest/_io/__pycache__/saferepr.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/_pytest/_io/__pycache__/terminalwriter.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/_pytest/_io/__pycache__/wcwidth.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/_pytest/_py/__init__.py
+venv/venv_py_sel4/Lib/site-packages/_pytest/_py/error.py
+venv/venv_py_sel4/Lib/site-packages/_pytest/_py/path.py
+venv/venv_py_sel4/Lib/site-packages/_pytest/_py/__pycache__/__init__.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/_pytest/_py/__pycache__/error.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/_pytest/_py/__pycache__/path.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/_pytest/assertion/__init__.py
+venv/venv_py_sel4/Lib/site-packages/_pytest/assertion/rewrite.py
+venv/venv_py_sel4/Lib/site-packages/_pytest/assertion/truncate.py
+venv/venv_py_sel4/Lib/site-packages/_pytest/assertion/util.py
+venv/venv_py_sel4/Lib/site-packages/_pytest/assertion/__pycache__/__init__.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/_pytest/assertion/__pycache__/rewrite.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/_pytest/assertion/__pycache__/truncate.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/_pytest/assertion/__pycache__/util.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/_pytest/config/__init__.py
+venv/venv_py_sel4/Lib/site-packages/_pytest/config/argparsing.py
+venv/venv_py_sel4/Lib/site-packages/_pytest/config/compat.py
+venv/venv_py_sel4/Lib/site-packages/_pytest/config/exceptions.py
+venv/venv_py_sel4/Lib/site-packages/_pytest/config/findpaths.py
+venv/venv_py_sel4/Lib/site-packages/_pytest/config/__pycache__/__init__.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/_pytest/config/__pycache__/argparsing.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/_pytest/config/__pycache__/compat.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/_pytest/config/__pycache__/exceptions.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/_pytest/config/__pycache__/findpaths.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/_pytest/mark/__init__.py
+venv/venv_py_sel4/Lib/site-packages/_pytest/mark/expression.py
+venv/venv_py_sel4/Lib/site-packages/_pytest/mark/structures.py
+venv/venv_py_sel4/Lib/site-packages/_pytest/mark/__pycache__/__init__.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/_pytest/mark/__pycache__/expression.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/_pytest/mark/__pycache__/structures.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/colorama/__init__.py
+venv/venv_py_sel4/Lib/site-packages/colorama/ansi.py
+venv/venv_py_sel4/Lib/site-packages/colorama/ansitowin32.py
+venv/venv_py_sel4/Lib/site-packages/colorama/initialise.py
+venv/venv_py_sel4/Lib/site-packages/colorama/win32.py
+venv/venv_py_sel4/Lib/site-packages/colorama/winterm.py
+venv/venv_py_sel4/Lib/site-packages/colorama/__pycache__/__init__.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/colorama/__pycache__/ansi.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/colorama/__pycache__/ansitowin32.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/colorama/__pycache__/initialise.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/colorama/__pycache__/win32.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/colorama/__pycache__/winterm.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/colorama/tests/__init__.py
+venv/venv_py_sel4/Lib/site-packages/colorama/tests/ansi_test.py
+venv/venv_py_sel4/Lib/site-packages/colorama/tests/ansitowin32_test.py
+venv/venv_py_sel4/Lib/site-packages/colorama/tests/initialise_test.py
+venv/venv_py_sel4/Lib/site-packages/colorama/tests/isatty_test.py
+venv/venv_py_sel4/Lib/site-packages/colorama/tests/utils.py
+venv/venv_py_sel4/Lib/site-packages/colorama/tests/winterm_test.py
+venv/venv_py_sel4/Lib/site-packages/colorama/tests/__pycache__/__init__.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/colorama/tests/__pycache__/ansi_test.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/colorama/tests/__pycache__/ansitowin32_test.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/colorama/tests/__pycache__/initialise_test.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/colorama/tests/__pycache__/isatty_test.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/colorama/tests/__pycache__/utils.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/colorama/tests/__pycache__/winterm_test.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/colorama-0.4.6.dist-info/INSTALLER
+venv/venv_py_sel4/Lib/site-packages/colorama-0.4.6.dist-info/METADATA
+venv/venv_py_sel4/Lib/site-packages/colorama-0.4.6.dist-info/RECORD
+venv/venv_py_sel4/Lib/site-packages/colorama-0.4.6.dist-info/WHEEL
+venv/venv_py_sel4/Lib/site-packages/colorama-0.4.6.dist-info/licenses/LICENSE.txt
+venv/venv_py_sel4/Lib/site-packages/iniconfig/__init__.py
+venv/venv_py_sel4/Lib/site-packages/iniconfig/_parse.py
+venv/venv_py_sel4/Lib/site-packages/iniconfig/_version.py
+venv/venv_py_sel4/Lib/site-packages/iniconfig/exceptions.py
+venv/venv_py_sel4/Lib/site-packages/iniconfig/py.typed
+venv/venv_py_sel4/Lib/site-packages/iniconfig/__pycache__/__init__.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/iniconfig/__pycache__/_parse.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/iniconfig/__pycache__/_version.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/iniconfig/__pycache__/exceptions.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/iniconfig-2.0.0.dist-info/INSTALLER
+venv/venv_py_sel4/Lib/site-packages/iniconfig-2.0.0.dist-info/METADATA
+venv/venv_py_sel4/Lib/site-packages/iniconfig-2.0.0.dist-info/RECORD
+venv/venv_py_sel4/Lib/site-packages/iniconfig-2.0.0.dist-info/WHEEL
+venv/venv_py_sel4/Lib/site-packages/iniconfig-2.0.0.dist-info/licenses/LICENSE
+venv/venv_py_sel4/Lib/site-packages/packaging/__init__.py
+venv/venv_py_sel4/Lib/site-packages/packaging/_elffile.py
+venv/venv_py_sel4/Lib/site-packages/packaging/_manylinux.py
+venv/venv_py_sel4/Lib/site-packages/packaging/_musllinux.py
+venv/venv_py_sel4/Lib/site-packages/packaging/_parser.py
+venv/venv_py_sel4/Lib/site-packages/packaging/_structures.py
+venv/venv_py_sel4/Lib/site-packages/packaging/_tokenizer.py
+venv/venv_py_sel4/Lib/site-packages/packaging/markers.py
+venv/venv_py_sel4/Lib/site-packages/packaging/metadata.py
+venv/venv_py_sel4/Lib/site-packages/packaging/py.typed
+venv/venv_py_sel4/Lib/site-packages/packaging/requirements.py
+venv/venv_py_sel4/Lib/site-packages/packaging/specifiers.py
+venv/venv_py_sel4/Lib/site-packages/packaging/tags.py
+venv/venv_py_sel4/Lib/site-packages/packaging/utils.py
+venv/venv_py_sel4/Lib/site-packages/packaging/version.py
+venv/venv_py_sel4/Lib/site-packages/packaging/__pycache__/__init__.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/packaging/__pycache__/_elffile.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/packaging/__pycache__/_manylinux.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/packaging/__pycache__/_musllinux.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/packaging/__pycache__/_parser.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/packaging/__pycache__/_structures.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/packaging/__pycache__/_tokenizer.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/packaging/__pycache__/markers.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/packaging/__pycache__/metadata.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/packaging/__pycache__/requirements.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/packaging/__pycache__/specifiers.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/packaging/__pycache__/tags.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/packaging/__pycache__/utils.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/packaging/__pycache__/version.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/packaging-23.1.dist-info/INSTALLER
+venv/venv_py_sel4/Lib/site-packages/packaging-23.1.dist-info/LICENSE
+venv/venv_py_sel4/Lib/site-packages/packaging-23.1.dist-info/LICENSE.APACHE
+venv/venv_py_sel4/Lib/site-packages/packaging-23.1.dist-info/LICENSE.BSD
+venv/venv_py_sel4/Lib/site-packages/packaging-23.1.dist-info/METADATA
+venv/venv_py_sel4/Lib/site-packages/packaging-23.1.dist-info/RECORD
+venv/venv_py_sel4/Lib/site-packages/packaging-23.1.dist-info/WHEEL
+venv/venv_py_sel4/Lib/site-packages/pip/_vendor/urllib3/packages/backports/weakref_finalize.py
+venv/venv_py_sel4/Lib/site-packages/pip/_vendor/urllib3/packages/backports/__pycache__/weakref_finalize.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/pip-23.2.dist-info/AUTHORS.txt
+venv/venv_py_sel4/Lib/site-packages/pip-23.2.dist-info/entry_points.txt
+venv/venv_py_sel4/Lib/site-packages/pip-23.2.dist-info/INSTALLER
+venv/venv_py_sel4/Lib/site-packages/pip-23.2.dist-info/LICENSE.txt
+venv/venv_py_sel4/Lib/site-packages/pip-23.2.dist-info/METADATA
+venv/venv_py_sel4/Lib/site-packages/pip-23.2.dist-info/RECORD
+venv/venv_py_sel4/Lib/site-packages/pip-23.2.dist-info/REQUESTED
+venv/venv_py_sel4/Lib/site-packages/pip-23.2.dist-info/top_level.txt
+venv/venv_py_sel4/Lib/site-packages/pip-23.2.dist-info/WHEEL
+venv/venv_py_sel4/Lib/site-packages/pluggy/__init__.py
+venv/venv_py_sel4/Lib/site-packages/pluggy/_callers.py
+venv/venv_py_sel4/Lib/site-packages/pluggy/_hooks.py
+venv/venv_py_sel4/Lib/site-packages/pluggy/_manager.py
+venv/venv_py_sel4/Lib/site-packages/pluggy/_result.py
+venv/venv_py_sel4/Lib/site-packages/pluggy/_tracing.py
+venv/venv_py_sel4/Lib/site-packages/pluggy/_version.py
+venv/venv_py_sel4/Lib/site-packages/pluggy/__pycache__/__init__.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/pluggy/__pycache__/_callers.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/pluggy/__pycache__/_hooks.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/pluggy/__pycache__/_manager.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/pluggy/__pycache__/_result.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/pluggy/__pycache__/_tracing.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/pluggy/__pycache__/_version.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/pluggy-1.2.0.dist-info/INSTALLER
+venv/venv_py_sel4/Lib/site-packages/pluggy-1.2.0.dist-info/LICENSE
+venv/venv_py_sel4/Lib/site-packages/pluggy-1.2.0.dist-info/METADATA
+venv/venv_py_sel4/Lib/site-packages/pluggy-1.2.0.dist-info/RECORD
+venv/venv_py_sel4/Lib/site-packages/pluggy-1.2.0.dist-info/top_level.txt
+venv/venv_py_sel4/Lib/site-packages/pluggy-1.2.0.dist-info/WHEEL
+venv/venv_py_sel4/Lib/site-packages/pytest/__init__.py
+venv/venv_py_sel4/Lib/site-packages/pytest/__main__.py
+venv/venv_py_sel4/Lib/site-packages/pytest/py.typed
+venv/venv_py_sel4/Lib/site-packages/pytest/__pycache__/__init__.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/pytest/__pycache__/__main__.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/pytest-7.4.0.dist-info/entry_points.txt
+venv/venv_py_sel4/Lib/site-packages/pytest-7.4.0.dist-info/INSTALLER
+venv/venv_py_sel4/Lib/site-packages/pytest-7.4.0.dist-info/LICENSE
+venv/venv_py_sel4/Lib/site-packages/pytest-7.4.0.dist-info/METADATA
+venv/venv_py_sel4/Lib/site-packages/pytest-7.4.0.dist-info/RECORD
+venv/venv_py_sel4/Lib/site-packages/pytest-7.4.0.dist-info/REQUESTED
+venv/venv_py_sel4/Lib/site-packages/pytest-7.4.0.dist-info/top_level.txt
+venv/venv_py_sel4/Lib/site-packages/pytest-7.4.0.dist-info/WHEEL
+venv/venv_py_sel4/Scripts/py.test.exe
+venv/venv_py_sel4/Scripts/pytest.exe
