Venv Pytest HTML gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -5100,3 +5100,163 @@ venv/venv_py_sel4/Lib/site-packages/pytest-7.4.0.dist-info/top_level.txt
 venv/venv_py_sel4/Lib/site-packages/pytest-7.4.0.dist-info/WHEEL
 venv/venv_py_sel4/Scripts/py.test.exe
 venv/venv_py_sel4/Scripts/pytest.exe
+venv/venv_py_sel4/Lib/site-packages/py/__init__.py
+venv/venv_py_sel4/Lib/site-packages/py/__init__.pyi
+venv/venv_py_sel4/Lib/site-packages/py/__metainfo.py
+venv/venv_py_sel4/Lib/site-packages/py/_builtin.py
+venv/venv_py_sel4/Lib/site-packages/py/_error.py
+venv/venv_py_sel4/Lib/site-packages/py/_std.py
+venv/venv_py_sel4/Lib/site-packages/py/_version.py
+venv/venv_py_sel4/Lib/site-packages/py/_xmlgen.py
+venv/venv_py_sel4/Lib/site-packages/py/error.pyi
+venv/venv_py_sel4/Lib/site-packages/py/iniconfig.pyi
+venv/venv_py_sel4/Lib/site-packages/py/io.pyi
+venv/venv_py_sel4/Lib/site-packages/py/path.pyi
+venv/venv_py_sel4/Lib/site-packages/py/py.typed
+venv/venv_py_sel4/Lib/site-packages/py/test.py
+venv/venv_py_sel4/Lib/site-packages/py/xml.pyi
+venv/venv_py_sel4/Lib/site-packages/py/__pycache__/__init__.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/py/__pycache__/__metainfo.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/py/__pycache__/_builtin.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/py/__pycache__/_error.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/py/__pycache__/_std.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/py/__pycache__/_version.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/py/__pycache__/_xmlgen.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/py/__pycache__/test.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/py/_code/__init__.py
+venv/venv_py_sel4/Lib/site-packages/py/_code/_assertionnew.py
+venv/venv_py_sel4/Lib/site-packages/py/_code/_assertionold.py
+venv/venv_py_sel4/Lib/site-packages/py/_code/_py2traceback.py
+venv/venv_py_sel4/Lib/site-packages/py/_code/assertion.py
+venv/venv_py_sel4/Lib/site-packages/py/_code/code.py
+venv/venv_py_sel4/Lib/site-packages/py/_code/source.py
+venv/venv_py_sel4/Lib/site-packages/py/_code/__pycache__/__init__.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/py/_code/__pycache__/_assertionnew.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/py/_code/__pycache__/_assertionold.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/py/_code/__pycache__/_py2traceback.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/py/_code/__pycache__/assertion.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/py/_code/__pycache__/code.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/py/_code/__pycache__/source.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/py/_io/__init__.py
+venv/venv_py_sel4/Lib/site-packages/py/_io/capture.py
+venv/venv_py_sel4/Lib/site-packages/py/_io/saferepr.py
+venv/venv_py_sel4/Lib/site-packages/py/_io/terminalwriter.py
+venv/venv_py_sel4/Lib/site-packages/py/_io/__pycache__/__init__.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/py/_io/__pycache__/capture.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/py/_io/__pycache__/saferepr.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/py/_io/__pycache__/terminalwriter.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/py/_log/__init__.py
+venv/venv_py_sel4/Lib/site-packages/py/_log/log.py
+venv/venv_py_sel4/Lib/site-packages/py/_log/warning.py
+venv/venv_py_sel4/Lib/site-packages/py/_log/__pycache__/__init__.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/py/_log/__pycache__/log.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/py/_log/__pycache__/warning.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/py/_path/__init__.py
+venv/venv_py_sel4/Lib/site-packages/py/_path/cacheutil.py
+venv/venv_py_sel4/Lib/site-packages/py/_path/common.py
+venv/venv_py_sel4/Lib/site-packages/py/_path/local.py
+venv/venv_py_sel4/Lib/site-packages/py/_path/svnurl.py
+venv/venv_py_sel4/Lib/site-packages/py/_path/svnwc.py
+venv/venv_py_sel4/Lib/site-packages/py/_path/__pycache__/__init__.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/py/_path/__pycache__/cacheutil.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/py/_path/__pycache__/common.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/py/_path/__pycache__/local.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/py/_path/__pycache__/svnurl.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/py/_path/__pycache__/svnwc.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/py/_process/__init__.py
+venv/venv_py_sel4/Lib/site-packages/py/_process/cmdexec.py
+venv/venv_py_sel4/Lib/site-packages/py/_process/forkedfunc.py
+venv/venv_py_sel4/Lib/site-packages/py/_process/killproc.py
+venv/venv_py_sel4/Lib/site-packages/py/_process/__pycache__/__init__.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/py/_process/__pycache__/cmdexec.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/py/_process/__pycache__/forkedfunc.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/py/_process/__pycache__/killproc.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/py/_vendored_packages/__init__.py
+venv/venv_py_sel4/Lib/site-packages/py/_vendored_packages/__pycache__/__init__.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/py/_vendored_packages/apipkg/__init__.py
+venv/venv_py_sel4/Lib/site-packages/py/_vendored_packages/apipkg/version.py
+venv/venv_py_sel4/Lib/site-packages/py/_vendored_packages/apipkg/__pycache__/__init__.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/py/_vendored_packages/apipkg/__pycache__/version.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/py/_vendored_packages/apipkg-2.0.0.dist-info/INSTALLER
+venv/venv_py_sel4/Lib/site-packages/py/_vendored_packages/apipkg-2.0.0.dist-info/LICENSE
+venv/venv_py_sel4/Lib/site-packages/py/_vendored_packages/apipkg-2.0.0.dist-info/METADATA
+venv/venv_py_sel4/Lib/site-packages/py/_vendored_packages/apipkg-2.0.0.dist-info/RECORD
+venv/venv_py_sel4/Lib/site-packages/py/_vendored_packages/apipkg-2.0.0.dist-info/REQUESTED
+venv/venv_py_sel4/Lib/site-packages/py/_vendored_packages/apipkg-2.0.0.dist-info/top_level.txt
+venv/venv_py_sel4/Lib/site-packages/py/_vendored_packages/apipkg-2.0.0.dist-info/WHEEL
+venv/venv_py_sel4/Lib/site-packages/py/_vendored_packages/iniconfig/__init__.py
+venv/venv_py_sel4/Lib/site-packages/py/_vendored_packages/iniconfig/__init__.pyi
+venv/venv_py_sel4/Lib/site-packages/py/_vendored_packages/iniconfig/py.typed
+venv/venv_py_sel4/Lib/site-packages/py/_vendored_packages/iniconfig/__pycache__/__init__.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/py/_vendored_packages/iniconfig-1.1.1.dist-info/INSTALLER
+venv/venv_py_sel4/Lib/site-packages/py/_vendored_packages/iniconfig-1.1.1.dist-info/LICENSE
+venv/venv_py_sel4/Lib/site-packages/py/_vendored_packages/iniconfig-1.1.1.dist-info/METADATA
+venv/venv_py_sel4/Lib/site-packages/py/_vendored_packages/iniconfig-1.1.1.dist-info/RECORD
+venv/venv_py_sel4/Lib/site-packages/py/_vendored_packages/iniconfig-1.1.1.dist-info/REQUESTED
+venv/venv_py_sel4/Lib/site-packages/py/_vendored_packages/iniconfig-1.1.1.dist-info/top_level.txt
+venv/venv_py_sel4/Lib/site-packages/py/_vendored_packages/iniconfig-1.1.1.dist-info/WHEEL
+venv/venv_py_sel4/Lib/site-packages/py-1.11.0.dist-info/INSTALLER
+venv/venv_py_sel4/Lib/site-packages/py-1.11.0.dist-info/LICENSE
+venv/venv_py_sel4/Lib/site-packages/py-1.11.0.dist-info/METADATA
+venv/venv_py_sel4/Lib/site-packages/py-1.11.0.dist-info/RECORD
+venv/venv_py_sel4/Lib/site-packages/py-1.11.0.dist-info/top_level.txt
+venv/venv_py_sel4/Lib/site-packages/py-1.11.0.dist-info/WHEEL
+venv/venv_py_sel4/Lib/site-packages/pytest_html/__init__.py
+venv/venv_py_sel4/Lib/site-packages/pytest_html/__version.py
+venv/venv_py_sel4/Lib/site-packages/pytest_html/extras.py
+venv/venv_py_sel4/Lib/site-packages/pytest_html/hooks.py
+venv/venv_py_sel4/Lib/site-packages/pytest_html/html_report.py
+venv/venv_py_sel4/Lib/site-packages/pytest_html/outcome.py
+venv/venv_py_sel4/Lib/site-packages/pytest_html/plugin.py
+venv/venv_py_sel4/Lib/site-packages/pytest_html/result.py
+venv/venv_py_sel4/Lib/site-packages/pytest_html/util.py
+venv/venv_py_sel4/Lib/site-packages/pytest_html/__pycache__/__init__.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/pytest_html/__pycache__/__version.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/pytest_html/__pycache__/extras.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/pytest_html/__pycache__/hooks.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/pytest_html/__pycache__/html_report.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/pytest_html/__pycache__/outcome.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/pytest_html/__pycache__/plugin.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/pytest_html/__pycache__/result.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/pytest_html/__pycache__/util.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/pytest_html/resources/main.js
+venv/venv_py_sel4/Lib/site-packages/pytest_html/resources/style.css
+venv/venv_py_sel4/Lib/site-packages/pytest_html-3.2.0.dist-info/entry_points.txt
+venv/venv_py_sel4/Lib/site-packages/pytest_html-3.2.0.dist-info/INSTALLER
+venv/venv_py_sel4/Lib/site-packages/pytest_html-3.2.0.dist-info/LICENSE
+venv/venv_py_sel4/Lib/site-packages/pytest_html-3.2.0.dist-info/METADATA
+venv/venv_py_sel4/Lib/site-packages/pytest_html-3.2.0.dist-info/RECORD
+venv/venv_py_sel4/Lib/site-packages/pytest_html-3.2.0.dist-info/REQUESTED
+venv/venv_py_sel4/Lib/site-packages/pytest_html-3.2.0.dist-info/top_level.txt
+venv/venv_py_sel4/Lib/site-packages/pytest_html-3.2.0.dist-info/WHEEL
+venv/venv_py_sel4/Lib/site-packages/pytest_metadata/__init__.py
+venv/venv_py_sel4/Lib/site-packages/pytest_metadata/__version.py
+venv/venv_py_sel4/Lib/site-packages/pytest_metadata/hooks.py
+venv/venv_py_sel4/Lib/site-packages/pytest_metadata/plugin.py
+venv/venv_py_sel4/Lib/site-packages/pytest_metadata/__pycache__/__init__.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/pytest_metadata/__pycache__/__version.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/pytest_metadata/__pycache__/hooks.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/pytest_metadata/__pycache__/plugin.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/pytest_metadata/ci/__init__.py
+venv/venv_py_sel4/Lib/site-packages/pytest_metadata/ci/appveyor.py
+venv/venv_py_sel4/Lib/site-packages/pytest_metadata/ci/bitbucket.py
+venv/venv_py_sel4/Lib/site-packages/pytest_metadata/ci/circleci.py
+venv/venv_py_sel4/Lib/site-packages/pytest_metadata/ci/gitlab_ci.py
+venv/venv_py_sel4/Lib/site-packages/pytest_metadata/ci/jenkins.py
+venv/venv_py_sel4/Lib/site-packages/pytest_metadata/ci/taskcluster.py
+venv/venv_py_sel4/Lib/site-packages/pytest_metadata/ci/travis_ci.py
+venv/venv_py_sel4/Lib/site-packages/pytest_metadata/ci/__pycache__/__init__.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/pytest_metadata/ci/__pycache__/appveyor.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/pytest_metadata/ci/__pycache__/bitbucket.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/pytest_metadata/ci/__pycache__/circleci.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/pytest_metadata/ci/__pycache__/gitlab_ci.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/pytest_metadata/ci/__pycache__/jenkins.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/pytest_metadata/ci/__pycache__/taskcluster.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/pytest_metadata/ci/__pycache__/travis_ci.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/pytest_metadata-3.0.0.dist-info/entry_points.txt
+venv/venv_py_sel4/Lib/site-packages/pytest_metadata-3.0.0.dist-info/INSTALLER
+venv/venv_py_sel4/Lib/site-packages/pytest_metadata-3.0.0.dist-info/METADATA
+venv/venv_py_sel4/Lib/site-packages/pytest_metadata-3.0.0.dist-info/RECORD
+venv/venv_py_sel4/Lib/site-packages/pytest_metadata-3.0.0.dist-info/WHEEL
+venv/venv_py_sel4/Lib/site-packages/pytest_metadata-3.0.0.dist-info/licenses/AUTHORS
+venv/venv_py_sel4/Lib/site-packages/pytest_metadata-3.0.0.dist-info/licenses/LICENSE
