Pytest HTML Report Example

--- a/.gitignore
+++ b/.gitignore
@@ -5260,3 +5260,74 @@ venv/venv_py_sel4/Lib/site-packages/pytest_metadata-3.0.0.dist-info/RECORD
 venv/venv_py_sel4/Lib/site-packages/pytest_metadata-3.0.0.dist-info/WHEEL
 venv/venv_py_sel4/Lib/site-packages/pytest_metadata-3.0.0.dist-info/licenses/AUTHORS
 venv/venv_py_sel4/Lib/site-packages/pytest_metadata-3.0.0.dist-info/licenses/LICENSE
+venv/venv_py_sel4/Lib/site-packages/pytest_html/__pycache__/__init__.cpython-311-pytest-7.4.0.pyc
+venv/venv_py_sel4/Lib/site-packages/pytest_html/__pycache__/__version.cpython-311-pytest-7.4.0.pyc
+venv/venv_py_sel4/Lib/site-packages/pytest_html/__pycache__/extras.cpython-311-pytest-7.4.0.pyc
+venv/venv_py_sel4/Lib/site-packages/pytest_html/__pycache__/hooks.cpython-311-pytest-7.4.0.pyc
+venv/venv_py_sel4/Lib/site-packages/pytest_html/__pycache__/html_report.cpython-311-pytest-7.4.0.pyc
+venv/venv_py_sel4/Lib/site-packages/pytest_html/__pycache__/outcome.cpython-311-pytest-7.4.0.pyc
+venv/venv_py_sel4/Lib/site-packages/pytest_html/__pycache__/plugin.cpython-311-pytest-7.4.0.pyc
+venv/venv_py_sel4/Lib/site-packages/pytest_html/__pycache__/result.cpython-311-pytest-7.4.0.pyc
+venv/venv_py_sel4/Lib/site-packages/pytest_html/__pycache__/util.cpython-311-pytest-7.4.0.pyc
+venv/venv_py_sel4/Lib/site-packages/pytest_metadata/__pycache__/__init__.cpython-311-pytest-7.4.0.pyc
+venv/venv_py_sel4/Lib/site-packages/pytest_metadata/__pycache__/hooks.cpython-311-pytest-7.4.0.pyc
+venv/venv_py_sel4/Lib/site-packages/pytest_metadata/__pycache__/plugin.cpython-311-pytest-7.4.0.pyc
+venv/venv_py_sel4/Lib/site-packages/pytest_metadata/ci/__pycache__/__init__.cpython-311-pytest-7.4.0.pyc
+venv/venv_py_sel4/Lib/site-packages/pytest_metadata/ci/__pycache__/appveyor.cpython-311-pytest-7.4.0.pyc
+venv/venv_py_sel4/Lib/site-packages/pytest_metadata/ci/__pycache__/bitbucket.cpython-311-pytest-7.4.0.pyc
+venv/venv_py_sel4/Lib/site-packages/pytest_metadata/ci/__pycache__/circleci.cpython-311-pytest-7.4.0.pyc
+venv/venv_py_sel4/Lib/site-packages/pytest_metadata/ci/__pycache__/gitlab_ci.cpython-311-pytest-7.4.0.pyc
+venv/venv_py_sel4/Lib/site-packages/pytest_metadata/ci/__pycache__/jenkins.cpython-311-pytest-7.4.0.pyc
+venv/venv_py_sel4/Lib/site-packages/pytest_metadata/ci/__pycache__/taskcluster.cpython-311-pytest-7.4.0.pyc
+venv/venv_py_sel4/Lib/site-packages/pytest_metadata/ci/__pycache__/travis_ci.cpython-311-pytest-7.4.0.pyc
+venv/venv_py_sel4/Lib/site-packages/allure.py
+venv/venv_py_sel4/Lib/site-packages/__pycache__/allure.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/allure_commons/__init__.py
+venv/venv_py_sel4/Lib/site-packages/allure_commons/_allure.py
+venv/venv_py_sel4/Lib/site-packages/allure_commons/_core.py
+venv/venv_py_sel4/Lib/site-packages/allure_commons/_hooks.py
+venv/venv_py_sel4/Lib/site-packages/allure_commons/lifecycle.py
+venv/venv_py_sel4/Lib/site-packages/allure_commons/logger.py
+venv/venv_py_sel4/Lib/site-packages/allure_commons/mapping.py
+venv/venv_py_sel4/Lib/site-packages/allure_commons/model2.py
+venv/venv_py_sel4/Lib/site-packages/allure_commons/reporter.py
+venv/venv_py_sel4/Lib/site-packages/allure_commons/types.py
+venv/venv_py_sel4/Lib/site-packages/allure_commons/utils.py
+venv/venv_py_sel4/Lib/site-packages/allure_commons/__pycache__/__init__.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/allure_commons/__pycache__/_allure.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/allure_commons/__pycache__/_core.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/allure_commons/__pycache__/_hooks.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/allure_commons/__pycache__/lifecycle.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/allure_commons/__pycache__/logger.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/allure_commons/__pycache__/mapping.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/allure_commons/__pycache__/model2.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/allure_commons/__pycache__/reporter.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/allure_commons/__pycache__/types.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/allure_commons/__pycache__/utils.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/allure_pytest/__init__.py
+venv/venv_py_sel4/Lib/site-packages/allure_pytest/helper.py
+venv/venv_py_sel4/Lib/site-packages/allure_pytest/listener.py
+venv/venv_py_sel4/Lib/site-packages/allure_pytest/plugin.py
+venv/venv_py_sel4/Lib/site-packages/allure_pytest/utils.py
+venv/venv_py_sel4/Lib/site-packages/allure_pytest/__pycache__/__init__.cpython-311-pytest-7.4.0.pyc
+venv/venv_py_sel4/Lib/site-packages/allure_pytest/__pycache__/__init__.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/allure_pytest/__pycache__/helper.cpython-311-pytest-7.4.0.pyc
+venv/venv_py_sel4/Lib/site-packages/allure_pytest/__pycache__/helper.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/allure_pytest/__pycache__/listener.cpython-311-pytest-7.4.0.pyc
+venv/venv_py_sel4/Lib/site-packages/allure_pytest/__pycache__/listener.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/allure_pytest/__pycache__/plugin.cpython-311-pytest-7.4.0.pyc
+venv/venv_py_sel4/Lib/site-packages/allure_pytest/__pycache__/plugin.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/allure_pytest/__pycache__/utils.cpython-311-pytest-7.4.0.pyc
+venv/venv_py_sel4/Lib/site-packages/allure_pytest/__pycache__/utils.cpython-311.pyc
+venv/venv_py_sel4/Lib/site-packages/allure_pytest-2.13.2.dist-info/entry_points.txt
+venv/venv_py_sel4/Lib/site-packages/allure_pytest-2.13.2.dist-info/INSTALLER
+venv/venv_py_sel4/Lib/site-packages/allure_pytest-2.13.2.dist-info/METADATA
+venv/venv_py_sel4/Lib/site-packages/allure_pytest-2.13.2.dist-info/RECORD
+venv/venv_py_sel4/Lib/site-packages/allure_pytest-2.13.2.dist-info/REQUESTED
+venv/venv_py_sel4/Lib/site-packages/allure_pytest-2.13.2.dist-info/top_level.txt
+venv/venv_py_sel4/Lib/site-packages/allure_pytest-2.13.2.dist-info/WHEEL
+venv/venv_py_sel4/Lib/site-packages/allure_python_commons-2.13.2.dist-info/INSTALLER
+venv/venv_py_sel4/Lib/site-packages/allure_python_commons-2.13.2.dist-info/METADATA
+venv/venv_py_sel4/Lib/site-packages/allure_python_commons-2.13.2.dist-info/RECORD
+venv/venv_py_sel4/Lib/site-packages/allure_python_commons-2.13.2.dist-info/top_level.txt
+venv/venv_py_sel4/Lib/site-packages/allure_python_commons-2.13.2.dist-info/WHEEL
