git ignore for pycache files

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,2 @@
 venv/*
-PytestQuickStart/myTest/__pycache__/*
-ssqatest/ssqatest/__pycache__/*
-ssqatest/ssqatest/tests/__pycache__/*
-ssqatest/ssqatest/src/pages/__pycache__/*
-ssqatest/ssqatest/src/pages/locators/__pycache__/*
-ssqatest/ssqatest/src/helpers/__pycache__/*
-ssqatest/ssqatest/src/__pycache__/*
-ssqatest/ssqatest/tests/my_account/__pycache__/*
+*.pyc
